--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>QR Code</title>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <title>QR Frontend Mentor</title>
 </head>
 <body>
+    <div class="mainContainer">
+        <img src="./images/image-qr-code.png" alt="image-qr-frontend-mentor">
+        <div class="textContainer">
+            <p class="textTittle">Improve your front-end skills by bulding projects</p>
+            <p class="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
     
+    </div>
 </body>
 </html>
